# Hserver

./: .gitignore  README.md  hsvr.cc  hsvr.h
src/: CMakeLists.txt  client.cc  main.cc  server.cc  test_task.cc
src/common/: hdata_struct.h  hobject.h
src/happ/: CMakeLists.txt  happ.cc  happ.h  happ_base.cc  happ_base.h
src/hlog/: CMakeLists.txt  hlog.cc  hlog.h
src/hmessage/: CMakeLists.txt  hmessage.pb.cc  hmessage.pb.h
src/hsvr/: CMakeLists.txt  hchannel.h  hchannelmgr.cc  hchannelmgr.h  hkq.cc  hkq.h  hsocket.cc  hsocket.h  hsvr.cc  hsvr.h  htcpchannel.cc  htcpchannel.h
src/hsvr_base/: CMakeLists.txt  hasynctask.h  hchannel.h  hchannelmgr.cc  hchannelmgr.h  hdispatch.cc  hdispatch.h  hfactory.cc  hfactory.h  hkq.cc  hkq.h  hmysqlcaller.cc  hmysqlcaller.h  hsocket.cc  hsocket.h  hsvr_base.cc  hsvr_base.h  htask_base.cc  htask_base.h  htaskmgr.cc  htaskmgr.h  htcpchannel.cc  htcpchannel.h  hthreadpool.cc  hthreadpool.h  htrans_base.cc  htrans_base.h
src/proto/: hmessage.proto  make.sh
